--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
     "main": "server.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "server": "nodemon --exec babel-node server.js"
+        "server": "nodemon --exec babel-node server.js",
+        "client": "npm start --prefix client",
+        "dev": "concurrently \"npm run server\" \"npm run client\""
     },
     "author": "",
     "license": "ISC",
     "dependencies": {
         "cors": "^2.8.5",
         "express": "^4.17.1",
+        "react-textarea-autosize": "^8.3.0",
         "socket.io": "^3.0.3",
         "uuid": "^8.3.1"
     },
@@ -20,6 +23,7 @@
         "@babel/core": "^7.12.9",
         "@babel/node": "^7.12.6",
         "@babel/preset-env": "^7.12.7",
+        "concurrently": "^5.3.0",
         "nodemon": "^2.0.6"
     }
 }
