--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "dependencies": {
         "cors": "^2.8.5",
         "express": "^4.17.1",
+        "react-icons": "^4.1.0",
         "react-textarea-autosize": "^8.3.0",
         "socket.io": "^3.0.3",
+        "styled-components-breakpoint": "^3.0.0-preview.20",
         "uuid": "^8.3.1"
     },
     "devDependencies": {
