--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
     "main": "server.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "server": "nodemon --exec babel-node server.js",
+        "server": "nodemon --exec babel-node src/server.js",
         "client": "npm start --prefix client",
-        "dev": "concurrently \"npm run server\" \"npm run client\""
+        "dev": "concurrently \"npm run server\" \"npm run client\"",
+        "clean": "rm -rf build && mkdir build",
+        "build-server": "babel -d ./build ./src -s",
+        "build": "npm run clean && npm run build-server",
+        "start": "npm run build && node ./build/server.js"
     },
     "author": "",
     "license": "ISC",
