--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
         "build-server": "babel -d ./build ./src -s",
         "client-build": "npm run build --prefix client",
         "build": "npm run clean && npm run build-server",
-        "start": "npm run client-build && npm run build && node ./build/server.js"
+        "start": "npm run build && node ./build/server.js",
+        "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
     },
     "author": "",
     "license": "ISC",
